# SocioMol

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
sociomol/: classes.py  dash_ui.py
